<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vulkan_version" />

        <Spinner
            style="@style/ComboBox"
            android:layout_width="match_parent"
            android:id="@+id/SVulkanVersion"
            android:entries="@array/vulkan_version_entries" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/max_device_memory" />

        <Spinner
            style="@style/ComboBox"
            android:layout_width="match_parent"
            android:id="@+id/SMaxDeviceMemory"
            android:entries="@array/max_device_memory_entries" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/image_cache_size" />

        <Spinner
            style="@style/ComboBox"
            android:layout_width="match_parent"
            android:id="@+id/SImageCacheSize"
            android:entries="@array/image_cache_size_entries" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resource_memory_type" />

        <Spinner
            style="@style/ComboBox"
            android:layout_width="match_parent"
            android:id="@+id/SResourceMemoryType"
            android:entries="@array/resource_memory_type_entries" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exposed_extensions" />

        <com.winlator.widget.MultiSelectionComboBox
            style="@style/MultiSelectionComboBox"
            android:layout_width="match_parent"
            android:id="@+id/CBExposedExtensions"
            android:entries="@array/max_device_memory_entries" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vortek_render_version" />

        <Spinner
            style="@style/ComboBox"
            android:layout_width="match_parent"
            android:id="@+id/SRenderVersion"
            android:entries="@array/vortek_render_version_entries" />
    </LinearLayout>
</ScrollView>