<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout style="@style/FieldSet">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/version" />

                <Spinner
                    style="@style/ComboBox"
                    android:layout_width="match_parent"
                    android:id="@+id/SDXVKVersion"
                    android:entries="@array/dxvk_version_entries" />

                <LinearLayout
                    android:id="@+id/LLAsync"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:text="@string/enabled_async" />

                    <ToggleButton
                        android:id="@+id/SWAsync"
                        android:layout_width="64dp"
                        android:layout_height="32dp"
                        android:background="@drawable/toggle_button_selector"
                        android:textOn=""
                        android:textOff="" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/LLAsyncCache"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:text="@string/enabled_async_cache" />

                    <ToggleButton
                        android:id="@+id/SWAsyncCache"
                        android:layout_width="64dp"
                        android:layout_height="32dp"
                        android:background="@drawable/toggle_button_selector"
                        android:textOn=""
                        android:textOff="" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/frame_rate" />

                <Spinner
                    style="@style/ComboBox"
                    android:layout_width="match_parent"
                    android:id="@+id/SFramerate"
                    android:entries="@array/dxvk_framerate_entries" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/max_device_memory" />

                <Spinner
                    style="@style/ComboBox"
                    android:layout_width="match_parent"
                    android:id="@+id/SMaxDeviceMemory"
                    android:entries="@array/dxvk_max_device_memory_entries" />
            </LinearLayout>

            <TextView
                style="@style/FieldSetLabel"
                android:text="@string/dxvk" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout style="@style/FieldSet">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/version" />

                <Spinner
                    style="@style/ComboBox"
                    android:layout_width="match_parent"
                    android:id="@+id/SVKD3DVersion"
                    android:entries="@array/vkd3d_version_entries" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vkd3d_feature_level" />

                <Spinner
                    style="@style/ComboBox"
                    android:layout_width="match_parent"
                    android:id="@+id/SFeatureLevel" />
            </LinearLayout>

            <TextView
                style="@style/FieldSetLabel"
                android:text="@string/vkd3d" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout style="@style/FieldSet"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/use_dgVoodoo" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:text="@string/dgVoodoo_ddraw" />

                    <ToggleButton
                        android:id="@+id/enableDgVoodooDDraw"
                        android:layout_width="64dp"
                        android:layout_height="32dp"
                        android:layout_gravity="center"
                        android:background="@drawable/toggle_button_selector"
                        android:textOn=""
                        android:textOff="" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:text="@string/dgVoodoo_d3d89" />

                    <ToggleButton
                        android:id="@+id/enableDgVoodooD3D89"
                        android:layout_width="64dp"
                        android:layout_height="32dp"
                        android:layout_gravity="center"
                        android:background="@drawable/toggle_button_selector"
                        android:textOn=""
                        android:textOff="" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                style="@style/FieldSetLabel"
                android:text="@string/dgVoodoo" />
        </FrameLayout>
    </LinearLayout>
</ScrollView>